altering server.js to use environment variable if available - for cf

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4"
+  },
+  "engines": {
+    "node": "10.x",
+    "npm": "6.4.x"
   }
 }
